gets all content on page

--- a/HTML_CSS/style.css
+++ b/HTML_CSS/style.css
@@ -2,4 +2,13 @@
 img {
 	position: relative;
 	height: 100%;
+	width: auto;
+}
+
+.card {
+	height: 300px;
+}
+
+footer {
+	background-color: blue;
 }
