--- a/HTML_CSS/style.css
+++ b/HTML_CSS/style.css
@@ -4,6 +4,7 @@
 }
 li {
 	list-style: none;
+	font-size: .9rem;
 }
 
 footer {
@@ -18,8 +19,55 @@ button {
 	padding-right: 0;
 }
 
+.contact-info{
+  display: inline-block;
+}
+.contact-info img{
+  display: inline-block;
+  margin: auto 0;
+}
+
 .form-fix {
 	left: -30px;
+}
+h1 {
+    font-size: 1rem;
+}
+
+@media (min-width: 400px) {
+    h1 {
+        font-size: 1.3rem;
+    }
+    p {
+    	font-size: 0.6rem;
+    }
+}
+
+@media (min-width: 600px) {
+    h1 {
+        font-size: 1.6rem;
+    }
+    p {
+    	font-size: 0.7rem;
+    }
+}
+
+@media (min-width: 800px) {
+    h1 {
+        font-size: 1.9rem;
+    }
+    p {
+    	font-size: 1.2rem;
+    }
+}
+
+@media (min-width: 1000px) {
+    h1 {
+        font-size: 2.2rem;
+    }
+    p {
+    	font-size: 1.4rem;
+    }
 }
 
 @media (min-width: 787px) {
