--- a/HTML_CSS/style.css
+++ b/HTML_CSS/style.css
@@ -34,39 +34,44 @@ h1 {
     font-size: 1rem;
 }
 
+::-webkit-input-placeholder {
+   font-size: 21px;
+}
+
+:-moz-placeholder {
+      font-size: 25px;
+}
+
+::-moz-placeholder {
+      font-size: 25px;
+}
+
+::-webkit-input-placeholder {
+   font-size: 19px!important;
+}
+
+:-moz-placeholder { 
+      font-size: 13px!important;
+}
+::-moz-placeholder {
+      font-size: 13px!important;
+}
+
 @media (min-width: 400px) {
-    h1 {
-        font-size: 1.3rem;
-    }
-    p {
-    	font-size: 0.6rem;
+    html { 
+    	font-size: 4vw; 
     }
 }
 
 @media (min-width: 600px) {
-    h1 {
-        font-size: 1.6rem;
-    }
-    p {
-    	font-size: 0.7rem;
-    }
-}
-
-@media (min-width: 800px) {
-    h1 {
-        font-size: 1.9rem;
-    }
-    p {
-    	font-size: 1.2rem;
+    html { 
+    	font-size: 2.3vw; 
     }
 }
 
 @media (min-width: 1000px) {
-    h1 {
-        font-size: 2.2rem;
-    }
-    p {
-    	font-size: 1.4rem;
+    html { 
+    	font-size: 1.9vw; 
     }
 }
 
