--- a/HTML_CSS/style.css
+++ b/HTML_CSS/style.css
@@ -22,7 +22,7 @@ div.icon {
 	width: 15%;
 }
 .caption {
-		margin-top: 2px;
+	margin-top: 2px;
     display: block;
     font-size: 15px;
 }
@@ -42,9 +42,6 @@ li {
 	font-size: .9rem;
 }
 
-.search-links {
-	width: 100%;
-}
 
 .search-input {
 	height: 40px;
@@ -60,6 +57,11 @@ select {
 	width: 100%;
 	height: 50px;
 	text-align: center;
+}
+
+.hero-links {
+	color: #237377;
+	font-weight: bold; 
 }
 
 .nav-tabs { 
